--- a/scratch.html
+++ b/scratch.html
@@ -9,6 +9,8 @@
 <body>
     <div class="header">
         <h1 id="top">Trout Fishing Adventures</h1>
+
+        <a href="index.html">Back to Résumé</a>
     </div>
     <div class="intro">
         <p>Welcome to my page about trout fishing — the best way to spend everyday.</p>
