--- a/scratch.html
+++ b/scratch.html
@@ -38,7 +38,7 @@
 
         <h2>Tableau Graph: US Freshwater Fish State Records</h2>
         <div class="tableauPlaceholder">
-            <iframe src="https://public.tableau.com/app/profile/nolen.akerman/viz/USFreshwaterFishStateRecords/StateRecordsMapView" width="100%" height="600"></iframe>
+            <iframe src="https://public.tableau.com/views/USFreshwaterFishStateRecords/StateRecordsMapView?:embed=y" width="100%" height="600"></iframe>
         </div>
 
         <p><a href="#top">Back to top</a></p>
