--- a/scratch.html
+++ b/scratch.html
@@ -37,9 +37,8 @@
         <iframe width="560" height="315" src="https://www.youtube.com/embed/yCIsN1iRYvw" frameborder="0" allowfullscreen></iframe>        
 
         <h2>Tableau Graph: US Freshwater Fish State Records</h2>
-        <div class="tableauPlaceholder">
-            <iframe src="https://public.tableau.com/views/USFreshwaterFishStateRecords/StateRecordsMapView?:embed=y" width="100%" height="600"></iframe>
-        </div>
+        <div class='tableauPlaceholder' id='viz1745323137291' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;US&#47;USFreshwaterFishStateRecords&#47;StateRecordsMapView&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='USFreshwaterFishStateRecords&#47;StateRecordsMapView' /><param name='tabs' value='yes' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;US&#47;USFreshwaterFishStateRecords&#47;StateRecordsMapView&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1745323137291');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='750px';vizElement.style.height='800px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+
 
         <p><a href="#top">Back to top</a></p>
         <p><a href="guessing-game.html">Try My Number Guessing Game</a></p>
